[gd_scene load_steps=6 format=3 uid="uid://bcmpq5qvib2fb"]

[ext_resource type="Script" uid="uid://by1inpio3n67j" path="res://components/apps/locked_in/locked_in_profile_ui.gd" id="1_4nn1u"]
[ext_resource type="PackedScene" uid="uid://bo7jj5gh57d4n" path="res://components/greek_stats_ui.tscn" id="2_0c1jh"]
[ext_resource type="PackedScene" uid="uid://drm1apbdsjj5g" path="res://components/portrait/portrait_view.tscn" id="3_pv"]
[ext_resource type="PackedScene" uid="uid://cvfnvh6tdmmnp" path="res://components/apps/locked_in/locked_in_wall_ui.tscn" id="4_jg1uy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nn1u"]

[node name="LockedInProfile" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_4nn1u")
script = ExtResource("1_4nn1u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="ProfilePic" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_pv")]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
subject_is_player = true

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "Name McNamerson"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="UsernameButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 12
text = "AIM @username"
flat = true

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="WorkLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name McNamerson is creating lifelong b2b partnerships"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RelationshipLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Name McNamerson is Terminally Single"

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="AffinityProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 25)
layout_mode = 2
size_flags_vertical = 8
value = 50.0
show_percentage = false

[node name="GreekStatsUI" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_0c1jh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BioLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 6
text = "Name McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnershipsName McNamerson is creating lifelong b2b partnerships"
autowrap_mode = 3

[node name="LockedInWallUI" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_jg1uy")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 20.0
